# wiki-vec-bench

./: Cargo.toml  MIGRATION_SUMMARY.md  README.md  REFACTORING.md
scripts/: download_wiki_embeddings.py
src/: freshness_bench.rs  main.rs  read_bench.rs  read_bench_old_backup.rs  read_bench_refactored.rs  read_vector_bench.rs  vector_baseline.rs
