[package]
name = "wiki-vec-bench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "read-bench"
path = "src/read_bench.rs"

[[bin]]
name = "read-vector-bench"
path = "src/read_vector_bench.rs"

[[bin]]
name = "vector-baseline"
path = "src/vector_baseline.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "mysql", "chrono", "macros"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
parquet = { version = "52", features = ["arrow"] }
arrow-array = "52"
arrow-schema = "52"